More modernization to terminal code.
* Update to Java 8 BREE
* Remove useless non-javadoc comments
* Generification, lambdas and etc.

Change-Id: Id81032fe7cea6b37ac95c274f6e009714ec87441
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>